   * Fixed [role] not working when no type was specified (bug #12660).
   * Fixed compilation with Python 2.6 (bug #12638 (included a patch)).
   * Fixed spammy multiplication of advancement options for units
     affected by the [unit_type][advancefrom] clause (observed in
     add-on Invasion_from_the_Unknown from the wesnoth-umc-dev
     trunk) each time advancements were evaluated.

Version 1.5.6:
 * Authoring tools:
   * trackplacer is a pygtk tool that makes it possible to visually edit
     the journey tracks on Wesnoth campaign maps.
 * Campaigns:
   * Descent into Darkness
     * Added a set of story art.
     * Made Malin's side use the ostensibly obscure undead flags after his
       banishment
   * Eastern Invasion
     * In 'Weldyn Besieged', the positions of the liches are now randomized and
       their names hidden until you attack them (patch #1109).
   * Legend of Wesmere
     * Newly added to mainline: Intermediate level, 24 scenarios.
       (Imported from wesnoth-umc-dev.)
   * Son of the Black Eye
     * In 'Clash of Armies', fixed all the merman spawns not working correctly
       and limited the number of simultaneous enemy gryphon recruits on the
       easiest difficulty.
   * The South Guard
     * Rewrote 'The Long March'.
     * Made each turn past turn 6 that passes in 'Pebbles in the Flood' give
       you some concrete benefit in 'Tides of War'. Also, the Council of Westin
       now always appears, but the exact turn depends on the length of
       Gerrick's defense.
   * Under the Burning Suns
     * Made use of the undead flag for undead sides
     * All known bugs (e.g. in Keratur's appearances and related to Kaleh's
       AMLAs) have been fixed.
     * Garak now gets into a duel of champions in "A Stirring In The Night".
     * The Quenoth elf graphics have been refreshed; most of their sprites
       now match the size of other 2.0 sprites and have been team-colored.
     * Fixed the problem with Nym's defense animation